<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_main"
        android:layout_width="match_parent"
        android:layout_height="500dp">

        <EditText
            android:id="@+id/login_username_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:background="@drawable/login_input_background"
            android:hint="@string/username"
            android:inputType="text"
            android:minHeight="50dp"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:textAlignment="center"
            android:textColorHighlight="#3F5CB5"
            android:textColorHint="#B394A1A0"
            android:textColorLink="#9727B0"
            app:layout_constraintBottom_toBottomOf="@id/login_password_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_password_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:background="@drawable/login_input_background"
            android:inputType="textPassword"
            android:minHeight="50dp"
            android:textAlignment="center"
            android:textColorHighlight="#3F5CB5"
            android:textColorHint="#B394A1A0"
            android:textColorLink="#9727B0"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_username_input" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_options"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/login_button_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/no_account"
            />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/no_account_msg"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sign_up_button"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_background"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>